--- a/dev/css/app.css
+++ b/dev/css/app.css
@@ -4,3 +4,11 @@
   border: 5px solid #35b1ff;
   background-color: #f5f5f5;
 }
+
+#display {
+  height: 25px;
+  width: 200px;
+  border: 3px solid blue;
+  margin-left: 20px;
+  margin-top: 10px;
+}
